--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html>
     <head>
         <meta charset="utf-8">
         <title>YOI – Yoshino UI Core | {{ page.title | default: "Documentation" }}</title>
@@ -19,7 +20,7 @@
                         <img class="d-blk w-10 h-20" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
                     </div>
                     <div class="w-2-4">
-                        <p class="m-t-18 fs-20 tc-main-15">YOI – the Yoshino Interface Component Library</p>
+                        <p class="m-t-18 fs-20 tc-main-15">YOI – the Yoshino Frontend Component Library</p>
                     </div>
                     <div class="w-1-4 al-r">
                         <a class="btn btn--flat btn--light" href="#">Github</a>
@@ -36,7 +37,7 @@
             </article>
         </div>
         <footer class="center grid-float tc-gray-18 m-tb-15">
-            <div class="w-1-2">YOI – the Yoshino Interface Component Library.</div>
+            <div class="w-1-2">YOI – the Yoshino Frontend Component Library.</div>
             <div class="w-1-2 al-r">&copy; Yoshino.digital GmbH</div>
         </footer>
         <script src="{{ site.github.url }}/assets/js/jquery.min.js"></script>
@@ -44,16 +45,3 @@
         <script src="{{ site.github.url }}/assets/js/yoi.js"></script>
     </body>
 </html>
-
-
-<!--
-    <div class="w-1-4 bg-green-25">
-        <img class="d-blk w-10 h-20" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
-    </div>
-    <div class="w-2-4 bg-blue-25">
-        <p class="m-t-18 fs-20 tc-main-15">YOI – the Yoshino Interface Component Library</p>
-    </div>
-    <div class="w-1-4 bg-red-25">
-        <p>yoyo</p>
-    </div>
--->
