--- a/src/less/elements/button.less
+++ b/src/less/elements/button.less
@@ -23,7 +23,7 @@
     line-height: 2.3rem;
     padding: 0 1rem;
     position: relative;
-    text-align: left;
+    text-align: center;
     text-shadow: 0 1px 0 @color-main-25;
     vertical-align: middle;
     white-space: nowrap;
