--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -22,7 +22,7 @@
                         <p class="m-t-18 fs-20 tc-main-15">YOI – the Yoshino Frontend Component Library</p>
                     </div>
                     <div class="w-1-4 al-r">
-                        <a class="btn btn--flat btn--light" href="#">Github</a>
+                        <a class="btn btn--flat btn--light" href="https://github.com/yoshino-digital/yoi">Github</a>
                     </div>
                 </div>
             </div>
