--- a/src/less/utilities/visibility.less
+++ b/src/less/utilities/visibility.less
@@ -3,6 +3,7 @@
 .visible   { visibility: visible !important; }
 .invisible { visibility: hidden !important; }
 .hidden    { .mixin-hidden !important; }
+.jsHidden  {}
 
 // visibility at certain breakpoints
 // =================================
