--- a/docs/_layouts/ajax.html
+++ b/docs/_layouts/ajax.html
@@ -5,7 +5,7 @@
         <title>{{ page.title }}</title>
     </head>
     <body>
-        <div id="ajaxContent" class="fs-15 p-4 bg-green-24 tc-green-10">
+        <div id="ajaxContent">
             {{ content }}
         </div>
     </body>
