--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -10,7 +10,7 @@
         <script>document.body.className='js';</script>
         <div class="modalPage">
             <a class="btn btn--large btn--subtle m-4" href="#link_back_to_previous_page">
-                <object class="icon" type="image/svg+xml" data="{{ site.icon }}008-s"></object>
+                <img src="http://cdn.yoshino.digital/svg.php?id=icon-008-s" yoi-icon />
                 <span>zurück</span>
             </a>
             <div class="modal">
