--- a/src/less/elements/btnDismiss.less
+++ b/src/less/elements/btnDismiss.less
@@ -14,8 +14,10 @@
     font-size: 0;
     height: 3.2rem;
     overflow: hidden;
-    position: relative;
+    position: absolute;
+    right: 0;
     text-color: transparent;
+    top: 0;
     width: 3.2rem;
 
     &:hover {
