--- a/src/less/theme/typography.less
+++ b/src/less/theme/typography.less
@@ -61,7 +61,7 @@
 @h4: {
     font-family: @font-sansserif;
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: normal;
     line-height: 1;
 };
 
