--- a/src/less/core/debug.less
+++ b/src/less/core/debug.less
@@ -3,7 +3,7 @@
 // debug options
 // =============
 
-@debugMediaquery   : false;
+@debugMediaquery   : true;
 @debugGrid         : false;
 @debugBemElements  : false;
 @debugBemModifiers : false;
