--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -10,19 +10,21 @@
         <script>document.body.className='js';</script>
         <div class="modalPage">
             <a class="btn btn--large btn--subtle m-4" href="#link_back_to_previous_page">
-                <img src="http://cdn.yoshino.digital/svg.php?id=icon-008-s" yoi-icon />
+                <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-008-s" yoi-icon />
                 <span>zurück</span>
             </a>
-            <div class="modal">
-                <div class="modal__header">
-                    <h3 class="modal__title">Demo Modal</h3>
-                </div>
-                <div class="modal__body">
-                    {{ content }}
-                </div>
-                <div class="modal__footer">
-                    <button class="btn btn--large btn--dark fl-r">OK</button>
-                    <span class="btn btn--large btn--subtle fl-r m-r-1" yoi-action="closeModal">Cancel</span>
+            <div class="p-4">
+                <div class="modal">
+                    <div class="modal__header">
+                        <h3 class="modal__title">Demo Modal</h3>
+                    </div>
+                    <div class="modal__body">
+                        {{ content }}
+                    </div>
+                    <div class="modal__footer">
+                        <button class="btn btn--large btn--dark fl-r">OK</button>
+                        <span class="btn btn--large btn--subtle fl-r m-r-1" yoi-action="closeModal">Cancel</span>
+                    </div>
                 </div>
             </div>
         </div>
