--- a/src/less/index.less
+++ b/src/less/index.less
@@ -19,7 +19,7 @@
 @import "core/mixins.less";
 @import "core/reset.less";
 @import "core/root.less";
-@import "core/documentation.less";
+@import "core/accessibility.less";
 
 // utilities
 
