--- a/src/less/utilities/interaction.less
+++ b/src/less/utilities/interaction.less
@@ -86,10 +86,11 @@
 .hvr-opacity-2:hover    { opacity: .2 !important; }
 .hvr-opacity-1:hover    { opacity: .1 !important; }
 
-// tab focus classes
+// focus
 
-.tabFocus       { .mixin-tabFocus() !important; }
-.tabFocus-inset { .mixin-tabFocus-inset() !important; }
+.focus          { .mixin-defaultFocus !important; }
+.tabFocus       { .mixin-tabFocus !important; }
+.tabFocus-inset { .mixin-tabFocus-inset !important; }
 
 // transitions
 // ===========
