--- a/src/less/theme/colors.less
+++ b/src/less/theme/colors.less
@@ -6,7 +6,7 @@
 @htmlBackgroundColor : @color-white;
 @bodyBackgroundColor : @color-white;
 @textColor           : @color-main-8;
-@focusColor          : @purple-15;
+@focusColor          : @blue-22;
 
 // color scheme
 // ============
