--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -11,7 +11,7 @@
         <div class="modalPage">
             <a class="btn btn--large btn--subtle m-4" href="#link_back_to_previous_page">
                 <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-008-s" yoi-icon />
-                <span>zurück</span>
+                <span>back</span>
             </a>
             <div class="p-4">
                 <div class="modal">
