--- a/src/less/elements/tooltip.less
+++ b/src/less/elements/tooltip.less
@@ -46,30 +46,48 @@
 // modifiers
 // =========
 
-.tooltip--attention {
-    .tooltipTheme(@color-attention-10, @color-attention-22, @color-attention-17)
+.tooltip--top::after,
+.tooltip--right::after,
+.tooltip--bottom::after,
+.tooltip--left::after {
+    background: @color-main-25;
+    border-bottom: @color-main-23 1px solid;
+    border-right: @color-main-23 1px solid;
+    box-sizing: border-box;
+    content: ' ';
+    height: 1rem;
+    position: absolute;
+    width: 1rem;
 }
 
-.tooltip--error,
-.tooltip--negative {
-    .tooltipTheme(@color-white, @color-negative-10, @color-negative-10)
+.tooltip--top::after {
+    bottom: 0;
+    left: 50%;
+    margin-bottom: -.6rem;
+    margin-left: -.5rem;
+    transform: rotate(45deg);
 }
 
-.tooltip--success,
-.tooltip--positive {
-    .tooltipTheme(@color-white, @color-positive-10, @color-positive-10)
+.tooltip--right::after {
+    left: 0;
+    margin-left: -.6rem;
+    margin-top: -.5rem;
+    top: 50%;
+    transform: rotate(135deg);
 }
 
-// "constructor" for different color themes
+.tooltip--bottom::after {
+    left: 50%;
+    margin-left: -.5rem;
+    margin-top: -.6rem;
+    top: 0;
+    transform: rotate(-135deg);
+}
 
-.tooltipTheme(@txtColor, @backgroundColor, @borderColor) {
-
-    background: @backgroundColor;
-    border-color: @borderColor;
-    color: @txtColor;
-
-    h1, h2, h3, h4, h5, h6, p, ul, ol {
-        color: @txtColor;
-    }
-
+.tooltip--left::after {
+    margin-right: -.6rem;
+    margin-top: -.5rem;
+    right: 0;
+    top: 50%;
+    transform: rotate(-45deg);
 }
