--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="modal__footer">
                         <button class="btn btn--large btn--dark fl-r">OK</button>
-                        <span class="btn btn--large btn--subtle fl-r m-r-1" yoi-action="closeModal">Cancel</span>
+                        <span class="btn btn--large btn--light btn--flat fl-r m-r-1" yoi-action="closeModal">Cancel</span>
                     </div>
                 </div>
             </div>
