--- a/src/less/elements/customRadiobutton.less
+++ b/src/less/elements/customRadiobutton.less
@@ -59,6 +59,7 @@
 .radio.input--checked {
     background: @color-positive-22;
     border: @color-main-10 .5rem solid;
+    box-shadow: none;
 }
 
 .radio.input--large.input--checked {
