--- a/src/less/theme/typography.less
+++ b/src/less/theme/typography.less
@@ -26,7 +26,7 @@
 
 // web font imports
 
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin-ext';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i&subset=latin-ext';
 
 // font families
 
@@ -40,29 +40,29 @@
 @h1: {
     font-family: @font-sansserif;
     font-size: 4rem;
-    font-weight: normal;
-    line-height: 1;
+    font-weight: 600;
+    line-height: 1.125;
 };
 
 @h2: {
     font-family: @font-sansserif;
     font-size: 2.5rem;
-    font-weight: normal;
-    line-height: 1;
+    font-weight: 600;
+    line-height: 1.2;
 };
 
 @h3: {
     font-family: @font-sansserif;
     font-size: 2rem;
-    font-weight: normal;
-    line-height: 1;
+    font-weight: 600;
+    line-height: 1.25;
 };
 
 @h4: {
     font-family: @font-sansserif;
     font-size: 1.75rem;
-    font-weight: normal;
-    line-height: 1;
+    font-weight: 600;
+    line-height: 1.45;
 };
 
 @h5: {
