--- a/src/less/utilities/responsive-typography.less
+++ b/src/less/utilities/responsive-typography.less
@@ -2,115 +2,130 @@
 
 // small
 
-@media @bp-from-s {
+@media @bp-only-s {
 
-    // font weight
+    // font-size
 
-    .small-fw-normal { font-weight: normal !important; }
-    .small-fw-bold   { font-weight: bold !important; }
+    .s--fs-0  { .fs-0; }
+    .s--fs-10 { .fs-10; }
+    .s--fs-15 { .fs-15; }
+    .s--fs-20 { .fs-20; }
+    .s--fs-25 { .fs-25; }
+    .s--fs-30 { .fs-30; }
+    .s--fs-35 { .fs-35; }
+    .s--fs-40 { .fs-40; }
+    .s--fs-45 { .fs-45; }
+    .s--fs-50 { .fs-50; }
 
-    // text transform
+    // line-height
 
-    .small-tt-uc { text-transform: uppercase !important; }
-    .small-tt-lc { text-transform: lowercase !important; }
+    .s--lh-0  { .lh-0; }
+    .s--lh-10 { .lh-10; }
+    .s--lh-15 { .lh-15; }
+    .s--lh-20 { .lh-20; }
+    .s--lh-25 { .lh-25; }
+    .s--lh-30 { .lh-30; }
+    .s--lh-35 { .lh-35; }
+    .s--lh-40 { .lh-40; }
+    .s--lh-45 { .lh-45; }
+    .s--lh-50 { .lh-50; }
+    .s--lh-55 { .lh-55; }
 
     // text alignment
 
-    .small-al-r  { text-align: right !important; }
-    .small-al-l  { text-align: left !important; }
-    .small-al-c  { text-align: center !important; }
+    .s--al-r { .al-r; }
+    .s--al-l { .al-l; }
+    .s--al-c { .al-c; }
 
     // line-break
 
-    .small-lbr-none { white-space: nowrap !important; }
-
-    // text decoration
-
-    .small-tdcr-none { text-decoration: none !important; }
-    .small-tdcr-undl { text-decoration: underline !important; }
-
-    // list styles
-
-    .small-lst-none   { list-style: none !important; }
-    .small-lst-square { list-style: square !important; }
-    .small-lst-circle { list-style: circle !important; }
-    .small-lst-disc   { list-style: disc !important; }
+    .s--lbr-none { .lbr-none; }
 
 }
 
 // medium
 
-@media @bp-from-m {
+@media @bp-only-m {
 
-    // font weight
+    // font-size
 
-    .medium-fw-normal { font-weight: normal !important; }
-    .medium-fw-bold   { font-weight: bold !important; }
+    .m--fs-0  { .fs-0; }
+    .m--fs-10 { .fs-10; }
+    .m--fs-15 { .fs-15; }
+    .m--fs-20 { .fs-20; }
+    .m--fs-25 { .fs-25; }
+    .m--fs-30 { .fs-30; }
+    .m--fs-35 { .fs-35; }
+    .m--fs-40 { .fs-40; }
+    .m--fs-45 { .fs-45; }
+    .m--fs-50 { .fs-50; }
 
-    // text transform
+    // line-height
 
-    .medium-tt-uc { text-transform: uppercase !important; }
-    .medium-tt-lc { text-transform: lowercase !important; }
+    .m--lh-0  { .lh-0; }
+    .m--lh-10 { .lh-10; }
+    .m--lh-15 { .lh-15; }
+    .m--lh-20 { .lh-20; }
+    .m--lh-25 { .lh-25; }
+    .m--lh-30 { .lh-30; }
+    .m--lh-35 { .lh-35; }
+    .m--lh-40 { .lh-40; }
+    .m--lh-45 { .lh-45; }
+    .m--lh-50 { .lh-50; }
+    .m--lh-55 { .lh-55; }
 
     // text alignment
 
-    .medium-al-r  { text-align: right !important; }
-    .medium-al-l  { text-align: left !important; }
-    .medium-al-c  { text-align: center !important; }
+    .m--al-r { .al-r; }
+    .m--al-l { .al-l; }
+    .m--al-c { .al-c; }
 
     // line-break
 
-    .medium-lbr-none { white-space: nowrap !important; }
-
-    // text decoration
-
-    .medium-tdcr-none { text-decoration: none !important; }
-    .medium-tdcr-undl { text-decoration: underline !important; }
-
-    // list styles
-
-    .medium-lst-none   { list-style: none !important; }
-    .medium-lst-square { list-style: square !important; }
-    .medium-lst-circle { list-style: circle !important; }
-    .medium-lst-disc   { list-style: disc !important; }
+    .m--lbr-none { .lbr-none; }
 
 }
 
 // large
 
-@media @bp-from-l {
+@media @bp-only-l {
 
-    // font weight
+    // font-size
 
-    .large-fw-normal { font-weight: normal !important; }
-    .large-fw-bold   { font-weight: bold !important; }
+    .l--fs-0  { .fs-0; }
+    .l--fs-10 { .fs-10; }
+    .l--fs-15 { .fs-15; }
+    .l--fs-20 { .fs-20; }
+    .l--fs-25 { .fs-25; }
+    .l--fs-30 { .fs-30; }
+    .l--fs-35 { .fs-35; }
+    .l--fs-40 { .fs-40; }
+    .l--fs-45 { .fs-45; }
+    .l--fs-50 { .fs-50; }
 
-    // text transform
+    // line-height
 
-    .large-tt-uc { text-transform: uppercase !important; }
-    .large-tt-lc { text-transform: lowercase !important; }
+    .l--lh-0  { .lh-0; }
+    .l--lh-10 { .lh-10; }
+    .l--lh-15 { .lh-15; }
+    .l--lh-20 { .lh-20; }
+    .l--lh-25 { .lh-25; }
+    .l--lh-30 { .lh-30; }
+    .l--lh-35 { .lh-35; }
+    .l--lh-40 { .lh-40; }
+    .l--lh-45 { .lh-45; }
+    .l--lh-50 { .lh-50; }
+    .l--lh-55 { .lh-55; }
 
     // text alignment
 
-    .large-al-r  { text-align: right !important; }
-    .large-al-l  { text-align: left !important; }
-    .large-al-c  { text-align: center !important; }
+    .l--al-r { .al-r; }
+    .l--al-l { .al-l; }
+    .l--al-c { .al-c; }
 
     // line-break
 
-    .large-lbr-none { white-space: nowrap !important; }
-
-    // text decoration
-
-    .large-tdcr-none { text-decoration: none !important; }
-    .large-tdcr-undl { text-decoration: underline !important; }
-
-    // list styles
-
-    .large-lst-none   { list-style: none !important; }
-    .large-lst-square { list-style: square !important; }
-    .large-lst-circle { list-style: circle !important; }
-    .large-lst-disc   { list-style: disc !important; }
+    .l--lbr-none { .lbr-none; }
 
 }
 
@@ -118,36 +133,41 @@
 
 @media @bp-from-xl {
 
-    // font weight
+    // font-size
 
-    .xlarge-fw-normal { font-weight: normal !important; }
-    .xlarge-fw-bold   { font-weight: bold !important; }
+    .xl--fs-0  { .fs-0; }
+    .xl--fs-10 { .fs-10; }
+    .xl--fs-15 { .fs-15; }
+    .xl--fs-20 { .fs-20; }
+    .xl--fs-25 { .fs-25; }
+    .xl--fs-30 { .fs-30; }
+    .xl--fs-35 { .fs-35; }
+    .xl--fs-40 { .fs-40; }
+    .xl--fs-45 { .fs-45; }
+    .xl--fs-50 { .fs-50; }
 
-    // text transform
+    // line-height
 
-    .xlarge-tt-uc { text-transform: uppercase !important; }
-    .xlarge-tt-lc { text-transform: lowercase !important; }
+    .xl--lh-0  { .lh-0; }
+    .xl--lh-10 { .lh-10; }
+    .xl--lh-15 { .lh-15; }
+    .xl--lh-20 { .lh-20; }
+    .xl--lh-25 { .lh-25; }
+    .xl--lh-30 { .lh-30; }
+    .xl--lh-35 { .lh-35; }
+    .xl--lh-40 { .lh-40; }
+    .xl--lh-45 { .lh-45; }
+    .xl--lh-50 { .lh-50; }
+    .xl--lh-55 { .lh-55; }
 
     // text alignment
 
-    .xlarge-al-r  { text-align: right !important; }
-    .xlarge-al-l  { text-align: left !important; }
-    .xlarge-al-c  { text-align: center !important; }
+    .xl--al-r { .al-r; }
+    .xl--al-l { .al-l; }
+    .xl--al-c { .al-c; }
 
     // line-break
 
-    .xlarge-lbr-none { white-space: nowrap !important; }
-
-    // text decoration
-
-    .xlarge-tdcr-none { text-decoration: none !important; }
-    .xlarge-tdcr-undl { text-decoration: underline !important; }
-
-    // list styles
-
-    .xlarge-lst-none   { list-style: none !important; }
-    .xlarge-lst-square { list-style: square !important; }
-    .xlarge-lst-circle { list-style: circle !important; }
-    .xlarge-lst-disc   { list-style: disc !important; }
+    .xl--lbr-none { .lbr-none; }
 
 }
