--- a/src/less/utilities/typography.less
+++ b/src/less/utilities/typography.less
@@ -47,7 +47,7 @@
 .fw-normal { font-weight: normal !important; }
 .fw-bold   { font-weight: bold !important; }
 
-// font styles
+// font style
 
 .fst-no { font-style: normal !important; }
 .fst-it { font-style: italic !important; }
