--- a/src/less/elements/dock.less
+++ b/src/less/elements/dock.less
@@ -17,6 +17,10 @@
     z-index: 500;
 }
 
+.js .dock {
+    background-clip: padding-box;
+}
+
 // elements
 // ========
 
@@ -37,7 +41,7 @@
 
 .dock--left {
 
-    border-right: @color-main-23 1px solid;
+    border-right: fade(@color-main-15, 30%) 1px solid;
     left: 0;
 
     &.is--hidden {
@@ -56,7 +60,7 @@
 
 .dock--right {
 
-    border-left: @color-main-23 1px solid;
+    border-left: fade(@color-main-15, 30%) 1px solid;
     right: 0;
 
     &.is--hidden {
