--- a/src/less/elements/flyout.less
+++ b/src/less/elements/flyout.less
@@ -27,7 +27,7 @@
     cursor: pointer;
     display: block;
     font: normal 2rem/3rem @font-sansserif;
-    padding: 0 1rem;
+    padding: 0 1rem 0 1.5rem;
     position: absolute;
     top: 3rem;
 
@@ -56,6 +56,11 @@
     transform: rotate(90deg);
     border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
     left: 0;
+}
+
+.js .flyout__handle {
+    background-clip: padding-box;
+    border-color: fade(@color-main-20, 30%);
 }
 
 // hide handle if js is disabled
@@ -108,6 +113,8 @@
     .flyout--visible {
 
         .mixin-shadow-3;
+        background-clip: padding-box;
+        border: fade(@color-main-20, 30%) 1px solid;
 
         .flyout__handle::after {
             .mixin-icon-bg(@id: 'icon-010-s', @fillColor: @color-main-8);
