--- a/src/less/elements/tooltip.less
+++ b/src/less/elements/tooltip.less
@@ -5,14 +5,13 @@
 
 .tooltip {
 
-    .mixin-shadow-3;
+    .mixin-shadow-4;
     .mixin-defaultBorderRadius;
-    background: @color-main-25;
-    border: @color-main-23 1px solid;
-    color: @color-main-10;
+    background: @color-main-8;
+    color: @color-main-25;
     display: block;
     max-width: 25rem;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     position: relative;
     text-align: left;
     white-space: normal;
@@ -21,7 +20,7 @@
     // typography inside tooltip
 
     h1, h2, h3, h4, h5, h6, p, ul, ol {
-        color: @color-main-10;
+        color: @color-main-25;
         font: normal 1.3rem/2rem @font-sansserif;
     }
 
@@ -50,44 +49,39 @@
 .tooltip--right::after,
 .tooltip--bottom::after,
 .tooltip--left::after {
-    background: @color-main-25;
-    border-bottom: @color-main-23 1px solid;
-    border-right: @color-main-23 1px solid;
+    background: @color-main-8;
     box-sizing: border-box;
     content: ' ';
     height: 1rem;
     position: absolute;
+    transform: rotate(45deg);
     width: 1rem;
 }
 
 .tooltip--top::after {
     bottom: 0;
     left: 50%;
-    margin-bottom: -.6rem;
+    margin-bottom: -.5rem;
     margin-left: -.5rem;
-    transform: rotate(45deg);
 }
 
 .tooltip--right::after {
     left: 0;
-    margin-left: -.6rem;
+    margin-left: -.5rem;
     margin-top: -.5rem;
     top: 50%;
-    transform: rotate(135deg);
 }
 
 .tooltip--bottom::after {
     left: 50%;
     margin-left: -.5rem;
-    margin-top: -.6rem;
+    margin-top: -.5rem;
     top: 0;
-    transform: rotate(-135deg);
 }
 
 .tooltip--left::after {
-    margin-right: -.6rem;
+    margin-right: -.5rem;
     margin-top: -.5rem;
     right: 0;
     top: 50%;
-    transform: rotate(-45deg);
 }
