--- a/src/less/index.less
+++ b/src/less/index.less
@@ -32,6 +32,7 @@
 @import "utilities/responsive-layout.less";
 @import "utilities/responsive-spacing.less";
 @import "utilities/responsive-typography.less";
+@import "utilities/responsive-visibility.less";
 @import "utilities/spacing.less";
 @import "utilities/styling.less";
 @import "utilities/typography.less";
