--- a/src/less/utilities/visibility.less
+++ b/src/less/utilities/visibility.less
@@ -1,72 +1,7 @@
 /** visibility.less */
 
-.visible   { visibility: visible !important; }
-.invisible { visibility: hidden !important; }
-.hidden    { .mixin-hidden !important; }
-.jsHidden  {}
+.vis-vis { visibility: visible !important; }
+.vis-hid { visibility: hidden !important; }
 
-// visibility at certain breakpoints
-// =================================
-
-// visible *only* at specific breakpoints
-
-@media @bp-only-s {
-    .show-m  { .mixin-hidden !important; }
-    .show-l  { .mixin-hidden !important; }
-    .show-xl { .mixin-hidden !important; }
-}
-
-@media @bp-only-m {
-    .show-s  { .mixin-hidden !important; }
-    .show-l  { .mixin-hidden !important; }
-    .show-xl { .mixin-hidden !important; }
-}
-
-@media @bp-only-l {
-    .show-s  { .mixin-hidden !important; }
-    .show-m  { .mixin-hidden !important; }
-    .show-xl { .mixin-hidden !important; }
-}
-
-@media @bp-only-xl {
-    .show-s  { .mixin-hidden !important; }
-    .show-m  { .mixin-hidden !important; }
-    .show-l  { .mixin-hidden !important; }
-}
-
-// hidden *only* at specific breakpoints
-
-@media @bp-only-s {
-    .hidden-s { .mixin-hidden !important; }
-}
-
-@media @bp-only-m {
-    .hidden-m { .mixin-hidden !important; }
-}
-
-@media @bp-only-l {
-    .hidden-l { .mixin-hidden !important; }
-}
-
-@media @bp-only-xl {
-    .hidden-xl { .mixin-hidden !important; }
-}
-
-// hidden from specific breakpoints on
-// (eg. .hidden-from-l "kicks in" at breakpoint "l")
-
-@media @bp-from-s {
-    .hidden-from-s { .mixin-hidden !important; }
-}
-
-@media @bp-from-m {
-    .hidden-from-m { .mixin-hidden !important; }
-}
-
-@media @bp-from-l {
-    .hidden-from-l { .mixin-hidden !important; }
-}
-
-@media @bp-from-xl {
-    .hidden-from-xl { .mixin-hidden !important; }
-}
+.visible {}
+.hidden  { .mixin-hidden !important; }
