--- a/src/less/theme/typography.less
+++ b/src/less/theme/typography.less
@@ -66,9 +66,17 @@
 };
 
 @h5: {
-    @h4();
+    font-family: @font-sansserif;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.3;
 };
 
 @h6: {
-    @h4();
+    font-family: @font-sansserif;
+    font-size: 1.3rem;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    line-height: 1.5;
+    text-transform: uppercase;
 };
