--- a/src/less/utilities/layout.less
+++ b/src/less/utilities/layout.less
@@ -95,7 +95,8 @@
     .generate_width_height((@i - 1));
 
     .w-@{i} {
-        width:  1rem * @i !important; box-sizing: border-box;
+        width:  1rem * @i !important;
+        box-sizing: border-box;
     }
 
     .h-@{i} {
