--- a/src/less/utilities/interaction.less
+++ b/src/less/utilities/interaction.less
@@ -11,80 +11,80 @@
 
     // background colors
 
-    .hvr-bg-attention-@{i}:hover { background: ~"@{color-attention-@{i}}" !important; }
-    .hvr-bg-blue-@{i}:hover      { background: ~"@{blue-@{i}}" !important; }
-    .hvr-bg-gray-@{i}:hover      { background: ~"@{gray-@{i}}" !important; }
-    .hvr-bg-green-@{i}:hover     { background: ~"@{green-@{i}}" !important; }
-    .hvr-bg-main-@{i}:hover      { background: ~"@{color-main-@{i}}" !important; }
-    .hvr-bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
-    .hvr-bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
-    .hvr-bg-purple-@{i}:hover    { background: ~"@{purple-@{i}}" !important; }
-    .hvr-bg-red-@{i}:hover       { background: ~"@{red-@{i}}" !important; }
-    .hvr-bg-yellow-@{i}:hover    { background: ~"@{yellow-@{i}}" !important; }
+    .hvr--bg-attention-@{i}:hover { background: ~"@{color-attention-@{i}}" !important; }
+    .hvr--bg-blue-@{i}:hover      { background: ~"@{blue-@{i}}" !important; }
+    .hvr--bg-gray-@{i}:hover      { background: ~"@{gray-@{i}}" !important; }
+    .hvr--bg-green-@{i}:hover     { background: ~"@{green-@{i}}" !important; }
+    .hvr--bg-main-@{i}:hover      { background: ~"@{color-main-@{i}}" !important; }
+    .hvr--bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
+    .hvr--bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
+    .hvr--bg-purple-@{i}:hover    { background: ~"@{purple-@{i}}" !important; }
+    .hvr--bg-red-@{i}:hover       { background: ~"@{red-@{i}}" !important; }
+    .hvr--bg-yellow-@{i}:hover    { background: ~"@{yellow-@{i}}" !important; }
 
     // text colors
 
-    .hvr-tc-attention-@{i}:hover  { color: ~"@{color-attention-@{i}}" !important; }
-    .hvr-tc-blue-@{i}:hover       { color: ~"@{blue-@{i}}" !important; }
-    .hvr-tc-gray-@{i}:hover       { color: ~"@{gray-@{i}}" !important; }
-    .hvr-tc-green-@{i}:hover      { color: ~"@{green-@{i}}" !important; }
-    .hvr-tc-main-@{i}:hover       { color: ~"@{color-main-@{i}}" !important; }
-    .hvr-tc-negative-@{i}:hover   { color: ~"@{color-negative-@{i}}" !important; }
-    .hvr-tc-positive-@{i}:hover   { color: ~"@{color-positive-@{i}}" !important; }
-    .hvr-tc-purple-@{i}:hover     { color: ~"@{purple-@{i}}" !important; }
-    .hvr-tc-red-@{i}:hover        { color: ~"@{red-@{i}}" !important; }
-    .hvr-tc-yellow-@{i}:hover     { color: ~"@{yellow-@{i}}" !important; }
+    .hvr--tc-attention-@{i}:hover { color: ~"@{color-attention-@{i}}" !important; }
+    .hvr--tc-blue-@{i}:hover      { color: ~"@{blue-@{i}}" !important; }
+    .hvr--tc-gray-@{i}:hover      { color: ~"@{gray-@{i}}" !important; }
+    .hvr--tc-green-@{i}:hover     { color: ~"@{green-@{i}}" !important; }
+    .hvr--tc-main-@{i}:hover      { color: ~"@{color-main-@{i}}" !important; }
+    .hvr--tc-negative-@{i}:hover  { color: ~"@{color-negative-@{i}}" !important; }
+    .hvr--tc-positive-@{i}:hover  { color: ~"@{color-positive-@{i}}" !important; }
+    .hvr--tc-purple-@{i}:hover    { color: ~"@{purple-@{i}}" !important; }
+    .hvr--tc-red-@{i}:hover       { color: ~"@{red-@{i}}" !important; }
+    .hvr--tc-yellow-@{i}:hover    { color: ~"@{yellow-@{i}}" !important; }
 
     // border colors
 
-    .hvr-bc-attention-@{i}:hover   { border-color: ~"@{color-attention-@{i}}" !important; }
-    .hvr-bc-blue-@{i}:hover        { border-color: ~"@{blue-@{i}}" !important; }
-    .hvr-bc-gray-@{i}:hover        { border-color: ~"@{gray-@{i}}" !important; }
-    .hvr-bc-green-@{i}:hover       { border-color: ~"@{green-@{i}}" !important; }
-    .hvr-bc-main-@{i}:hover        { border-color: ~"@{color-main-@{i}}" !important; }
-    .hvr-bc-negative-@{i}:hover    { border-color: ~"@{color-negative-@{i}}" !important; }
-    .hvr-bc-positive-@{i}:hover    { border-color: ~"@{color-positive-@{i}}" !important; }
-    .hvr-bc-purple-@{i}:hover      { border-color: ~"@{purple-@{i}}" !important; }
-    .hvr-bc-red-@{i}:hover         { border-color: ~"@{red-@{i}}" !important; }
-    .hvr-bc-yellow-@{i}:hover      { border-color: ~"@{yellow-@{i}}" !important; }
+    .hvr--bc-attention-@{i}:hover { border-color: ~"@{color-attention-@{i}}" !important; }
+    .hvr--bc-blue-@{i}:hover      { border-color: ~"@{blue-@{i}}" !important; }
+    .hvr--bc-gray-@{i}:hover      { border-color: ~"@{gray-@{i}}" !important; }
+    .hvr--bc-green-@{i}:hover     { border-color: ~"@{green-@{i}}" !important; }
+    .hvr--bc-main-@{i}:hover      { border-color: ~"@{color-main-@{i}}" !important; }
+    .hvr--bc-negative-@{i}:hover  { border-color: ~"@{color-negative-@{i}}" !important; }
+    .hvr--bc-positive-@{i}:hover  { border-color: ~"@{color-positive-@{i}}" !important; }
+    .hvr--bc-purple-@{i}:hover    { border-color: ~"@{purple-@{i}}" !important; }
+    .hvr--bc-red-@{i}:hover       { border-color: ~"@{red-@{i}}" !important; }
+    .hvr--bc-yellow-@{i}:hover    { border-color: ~"@{yellow-@{i}}" !important; }
 
 }
 .generate_hvrStyles(25);
 
-.hvr-bg-transparent:hover { background: @color-transparent !important; }
-.hvr-bg-white:hover       { background: @color-white !important; }
+.hvr--bg-transparent:hover { background: @color-transparent !important; }
+.hvr--bg-white:hover       { background: @color-white !important; }
 
-.hvr-tc-transparent:hover { color: @color-transparent !important; }
-.hvr-tc-white:hover       { color: @color-white !important; }
+.hvr--tc-transparent:hover { color: @color-transparent !important; }
+.hvr--tc-white:hover       { color: @color-white !important; }
 
-.hvr-bc-transparent:hover { border-color: @color-transparent !important; }
-.hvr-bc-white:hover       { border-color: @color-white !important; }
+.hvr--bc-transparent:hover { border-color: @color-transparent !important; }
+.hvr--bc-white:hover       { border-color: @color-white !important; }
 
 // text decoration
 
-.hvr-tdcr-none:hover { text-decoration: none !important; }
-.hvr-tdcr-undl:hover { text-decoration: underline !important; }
+.hvr--tdcr-none:hover { text-decoration: none !important; }
+.hvr--tdcr-undl:hover { text-decoration: underline !important; }
 
 // shadows
 
-.hvr-sh-1:hover    { .mixin-shadow-1 !important; }
-.hvr-sh-2:hover    { .mixin-shadow-2 !important; }
-.hvr-sh-3:hover    { .mixin-shadow-3 !important; }
-.hvr-sh-4:hover    { .mixin-shadow-4 !important; }
-.hvr-sh-none:hover { box-shadow: none !important; }
+.hvr--sh-1:hover    { .mixin-shadow-1 !important; }
+.hvr--sh-2:hover    { .mixin-shadow-2 !important; }
+.hvr--sh-3:hover    { .mixin-shadow-3 !important; }
+.hvr--sh-4:hover    { .mixin-shadow-4 !important; }
+.hvr--sh-none:hover { box-shadow: none !important; }
 
 // opacity
 
-.hvr-opacity-full:hover { opacity: 1 !important; }
-.hvr-opacity-9:hover    { opacity: .9 !important; }
-.hvr-opacity-8:hover    { opacity: .8 !important; }
-.hvr-opacity-7:hover    { opacity: .7 !important; }
-.hvr-opacity-6:hover    { opacity: .6 !important; }
-.hvr-opacity-5:hover    { opacity: .5 !important; }
-.hvr-opacity-4:hover    { opacity: .4 !important; }
-.hvr-opacity-3:hover    { opacity: .3 !important; }
-.hvr-opacity-2:hover    { opacity: .2 !important; }
-.hvr-opacity-1:hover    { opacity: .1 !important; }
+.hvr--opacity-full:hover { opacity: 1 !important; }
+.hvr--opacity-9:hover    { opacity: .9 !important; }
+.hvr--opacity-8:hover    { opacity: .8 !important; }
+.hvr--opacity-7:hover    { opacity: .7 !important; }
+.hvr--opacity-6:hover    { opacity: .6 !important; }
+.hvr--opacity-5:hover    { opacity: .5 !important; }
+.hvr--opacity-4:hover    { opacity: .4 !important; }
+.hvr--opacity-3:hover    { opacity: .3 !important; }
+.hvr--opacity-2:hover    { opacity: .2 !important; }
+.hvr--opacity-1:hover    { opacity: .1 !important; }
 
 // focus
 
