--- a/src/less/elements/menu.less
+++ b/src/less/elements/menu.less
@@ -17,6 +17,7 @@
     border-top: @color-main-23 1px solid;
     margin: 0;
     font-weight: bold;
+    font-size: 1.3rem;
 
     &:first-child {
         border: 0;
