--- a/src/less/index.less
+++ b/src/less/index.less
@@ -23,18 +23,29 @@
 
 // utilities
 
+@import "utilities/border.less";
+@import "utilities/color.less";
+@import "utilities/cursor.less";
 @import "utilities/fx.less";
+@import "utilities/gradient.less";
 @import "utilities/grid.less";
-@import "utilities/interaction.less";
+@import "utilities/interactive-color.less";
+@import "utilities/interactive-opacity.less";
+@import "utilities/interactive-shadow.less";
+@import "utilities/interactive-typography.less";
 @import "utilities/interface.less";
 @import "utilities/jsFallback.less";
 @import "utilities/layout.less";
+@import "utilities/opacity.less";
 @import "utilities/responsive-layout.less";
+@import "utilities/responsive-sizing.less";
 @import "utilities/responsive-spacing.less";
 @import "utilities/responsive-typography.less";
 @import "utilities/responsive-visibility.less";
+@import "utilities/shadow.less";
+@import "utilities/sizing.less";
 @import "utilities/spacing.less";
-@import "utilities/styling.less";
+@import "utilities/transition.less";
 @import "utilities/typography.less";
 @import "utilities/visibility.less";
 
