--- a/src/less/utilities/interactive-color.less
+++ b/src/less/utilities/interactive-color.less
@@ -1,12 +1,6 @@
-/** interaction.less */
-
-// mouseover / hover
-// =================
-
-// colors
+/** interactive-color.less */
 
 .generate_hvrStyles (@i) when (@i > 0) {
-
     .generate_hvrStyles((@i - 1));
 
     // background colors
@@ -59,41 +53,3 @@
 
 .hvr--bc-transparent:hover { border-color: @color-transparent !important; }
 .hvr--bc-white:hover       { border-color: @color-white !important; }
-
-// text decoration
-
-.hvr--tdcr-none:hover { text-decoration: none !important; }
-.hvr--tdcr-undl:hover { text-decoration: underline !important; }
-
-// shadows
-
-.hvr--sh-1:hover    { .mixin-shadow-1 !important; }
-.hvr--sh-2:hover    { .mixin-shadow-2 !important; }
-.hvr--sh-3:hover    { .mixin-shadow-3 !important; }
-.hvr--sh-4:hover    { .mixin-shadow-4 !important; }
-.hvr--sh-none:hover { box-shadow: none !important; }
-
-// opacity
-
-.hvr--opacity-full:hover { opacity: 1 !important; }
-.hvr--opacity-9:hover    { opacity: .9 !important; }
-.hvr--opacity-8:hover    { opacity: .8 !important; }
-.hvr--opacity-7:hover    { opacity: .7 !important; }
-.hvr--opacity-6:hover    { opacity: .6 !important; }
-.hvr--opacity-5:hover    { opacity: .5 !important; }
-.hvr--opacity-4:hover    { opacity: .4 !important; }
-.hvr--opacity-3:hover    { opacity: .3 !important; }
-.hvr--opacity-2:hover    { opacity: .2 !important; }
-.hvr--opacity-1:hover    { opacity: .1 !important; }
-
-// focus
-
-.focus          { .mixin-defaultFocus !important; }
-.tabFocus       { .mixin-tabFocus !important; }
-.tabFocus-inset { .mixin-tabFocus-inset !important; }
-
-// transitions
-// ===========
-
-.tween-fast { transition: all 100ms ease-out !important; }
-.tween-slow { transition: all 400ms ease-out !important; }
